@@ -1,79 +1,76 @@
 package com.mrcrayfish.furniture.refurbished.data;
 
+import com.google.common.collect.ImmutableList;
+import com.mojang.datafixers.util.Pair;
 import com.mrcrayfish.framework.Registration;
 import com.mrcrayfish.furniture.refurbished.Constants;
-import net.minecraft.core.registries.Registries;
-import net.minecraft.data.PackOutput;
-import net.minecraft.data.loot.BlockLootSubProvider;
-import net.minecraft.data.loot.EntityLootSubProvider;
+import net.minecraft.core.Registry;
+import net.minecraft.data.DataGenerator;
+import net.minecraft.data.loot.BlockLoot;
+import net.minecraft.data.loot.EntityLoot;
 import net.minecraft.data.loot.LootTableProvider;
 import net.minecraft.resources.ResourceLocation;
 import net.minecraft.world.entity.EntityType;
-import net.minecraft.world.flag.FeatureFlags;
 import net.minecraft.world.level.storage.loot.LootTable;
 import net.minecraft.world.level.storage.loot.ValidationContext;
+import net.minecraft.world.level.storage.loot.parameters.LootContextParamSet;
 import net.minecraft.world.level.storage.loot.parameters.LootContextParamSets;
 
-import java.util.Collections;
 import java.util.List;
 import java.util.Map;
-import java.util.Set;
+import java.util.function.BiConsumer;
+import java.util.function.Consumer;
+import java.util.function.Supplier;
 import java.util.stream.Collectors;
-import java.util.stream.Stream;
 
 /**
  * Author: MrCrayfish
  */
 public class FurnitureLootTableProvider extends LootTableProvider
 {
-    public FurnitureLootTableProvider(PackOutput output)
+    public FurnitureLootTableProvider(DataGenerator generator)
     {
-        super(output, Set.of(), List.of(new SubProviderEntry(Block::new, LootContextParamSets.BLOCK), new SubProviderEntry(Entity::new, LootContextParamSets.ENTITY)));
+        super(generator);
+    }
+
+    @Override
+    protected List<Pair<Supplier<Consumer<BiConsumer<ResourceLocation, LootTable.Builder>>>, LootContextParamSet>> getTables()
+    {
+        return ImmutableList.of(Pair.of(Block::new, LootContextParamSets.BLOCK), Pair.of(Entity::new, LootContextParamSets.ENTITY));
     }
 
     @Override
     protected void validate(Map<ResourceLocation, LootTable> map, ValidationContext context) {}
 
-    public static class Block extends BlockLootSubProvider
+    public static class Block extends BlockLoot
     {
-        protected Block()
-        {
-            super(Collections.emptySet(), FeatureFlags.REGISTRY.allFlags());
-        }
-
         @Override
-        protected void generate()
+        protected void addTables()
         {
             CommonLootTableProvider.Block.accept(new PlatformLootBuilder.Block(this::dropSelf, (block, builder) -> {
-
-                this.add(block, LootTable.lootTable().withPool(this.applyExplosionCondition(block, builder)));
+                this.add(block, LootTable.lootTable().withPool(applyExplosionCondition(block, builder)));
             }));
         }
 
         @Override
         protected Iterable<net.minecraft.world.level.block.Block> getKnownBlocks()
         {
-            return Registration.get(Registries.BLOCK).stream().filter(entry -> entry.getId().getNamespace().equals(Constants.MOD_ID)).map(entry -> (net.minecraft.world.level.block.Block) entry.get()).collect(Collectors.toList());
+            return Registration.get(Registry.BLOCK_REGISTRY).stream().filter(entry -> entry.getId().getNamespace().equals(Constants.MOD_ID)).map(entry -> (net.minecraft.world.level.block.Block) entry.get()).collect(Collectors.toList());
         }
     }
 
-    public static class Entity extends EntityLootSubProvider
+    public static class Entity extends EntityLoot
     {
-        protected Entity()
-        {
-            super(FeatureFlags.REGISTRY.allFlags());
-        }
-
         @Override
-        public void generate()
+        protected void addTables()
         {
             CommonLootTableProvider.Entity.accept(new PlatformLootBuilder.Entity(this::add));
         }
 
         @Override
-        protected Stream<EntityType<?>> getKnownEntityTypes()
+        protected Iterable<EntityType<?>> getKnownEntities()
         {
-            return Stream.of();
+            return List.of();
         }
     }
 }
